# tauri-demo

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  port_listener.rs
src/api/: api.ts
src/components/: App.tsx  PortListenersTable.tsx
src/components/ui/: toast.tsx
src/hooks/: use-on-error.ts  use-port-listeners.ts
