[package]
name = "freeport"
version = "0.1.0"
description = "Freeport (Tauri demo app)"
authors = ["Matthias Stemmler <matthias.stemmler@tngtech.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
listeners = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30.12"
tauri = { version = "1", features = ["shell-open"] }
tokio = { version = "1.37.0", features = ["macros", "time"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
